--- a/Silver-Arowana/Silver-Arowana.Shell/Silver-Arowana.Shell.csproj
+++ b/Silver-Arowana/Silver-Arowana.Shell/Silver-Arowana.Shell.csproj
@@ -9,6 +9,10 @@
     <Company>https://github.com/zhaotianff</Company>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="logo.png" />
   </ItemGroup>
