--- a/Silver-Arowana/Silver-Arowana.Core/Silver-Arowana.Core.vcxproj.filters
+++ b/Silver-Arowana/Silver-Arowana.Core/Silver-Arowana.Core.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClInclude Include="RegTool.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DesktopTool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="RegTool.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DesktopTool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
