--- a/Silver-Arowana/Silver-Arowana.Web/Silver-Arowana.Web.csproj
+++ b/Silver-Arowana/Silver-Arowana.Web/Silver-Arowana.Web.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Silver_Arowana.Web</RootNamespace>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
