--- a/Silver-Arowana/Silver-Arowana.Core/Silver-Arowana.Core.vcxproj
+++ b/Silver-Arowana/Silver-Arowana.Core/Silver-Arowana.Core.vcxproj
@@ -125,6 +125,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;SILVERAROWANACORE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
