--- a/Silver-Arowana/Silver-Arowana.Shell/Silver-Arowana.Shell.csproj
+++ b/Silver-Arowana/Silver-Arowana.Shell/Silver-Arowana.Shell.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Silver-Arowana.Config\Silver-Arowana.Config.csproj" />
     <ProjectReference Include="..\Silver-Arowana.Video\Silver-Arowana.Video.csproj" />
     <ProjectReference Include="..\Silver-Arowana.Web\Silver-Arowana.Web.csproj" />
   </ItemGroup>
