--- a/Master-Zhao/Master-Zhao.Shell.Test/Master-Zhao.Shell.Test.csproj
+++ b/Master-Zhao/Master-Zhao.Shell.Test/Master-Zhao.Shell.Test.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
-    <RootNamespace>Silver_Arowana.Shell.Test</RootNamespace>
+    <RootNamespace>Master_Zhao.Shell.Test</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <PlatformTarget>x64</PlatformTarget>
