--- a/Master-Zhao/Master-Zhao.Config/Master-Zhao.Config.csproj
+++ b/Master-Zhao/Master-Zhao.Config/Master-Zhao.Config.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Silver_Arowana.Config</RootNamespace>
+    <RootNamespace>Master_Zhao.Config</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
