--- a/Master-Zhao/Master-Zhao.Video/Master-Zhao.Video.csproj
+++ b/Master-Zhao/Master-Zhao.Video/Master-Zhao.Video.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
       <TargetFramework>net5.0-windows</TargetFramework>
-    <RootNamespace>Silver_Arowana.Video</RootNamespace>
+    <RootNamespace>Master_Zhao.Video</RootNamespace>
     <OutputType>Library</OutputType>
     <UseWindowsForms>true</UseWindowsForms>
     <UseWPF>true</UseWPF>
