--- a/Master-Zhao/Master-Zhao.Web/Master-Zhao.Web.csproj
+++ b/Master-Zhao/Master-Zhao.Web/Master-Zhao.Web.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Silver_Arowana.Web</RootNamespace>
+    <RootNamespace>Master_Zhao.Web</RootNamespace>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
