--- a/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj
+++ b/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj
@@ -74,6 +74,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <TargetName>SilverArowanaCore</TargetName>
+    <OutDir>..\Master-Zhao.Shell\bin\Debug\net5.0-windows\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
