--- a/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj
+++ b/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj
@@ -162,11 +162,13 @@
     <ClInclude Include="DesktopTool.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="RegTool.h" />
+    <ClInclude Include="SystemTool.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DesktopTool.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="RegTool.cpp" />
+    <ClCompile Include="SystemTool.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
