--- a/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj.filters
+++ b/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="DesktopTool.h">
       <Filter>头文件</Filter>
     </ClInclude>
+     <ClInclude Include="SystemTool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -39,6 +42,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="DesktopTool.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+     <ClCompile Include="SystemTool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
