--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -19,6 +19,8 @@
     <None Remove="Icon\desktop.png" />
     <None Remove="Icon\information.png" />
     <None Remove="Icon\system.png" />
+    <None Remove="Icon\windows10_blurtaskbar.png" />
+    <None Remove="Icon\windows10_taskbar.png" />
     <None Remove="logo.png" />
     <None Remove="recycle.png" />
   </ItemGroup>
@@ -43,6 +45,8 @@
     <Resource Include="Icon\desktop.png" />
     <Resource Include="Icon\information.png" />
     <Resource Include="Icon\system.png" />
+    <Resource Include="Icon\windows10_blurtaskbar.png" />
+    <Resource Include="Icon\windows10_taskbar.png" />
     <Resource Include="logo.png" />
     <Resource Include="recycle.png" />
   </ItemGroup>
