--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <None Remove="flower.jpg" />
     <None Remove="Icon\about.png" />
+    <None Remove="Icon\about_back.jpeg" />
     <None Remove="Icon\desktop.png" />
     <None Remove="Icon\information.png" />
     <None Remove="Icon\system.png" />
@@ -42,6 +43,7 @@
 
   <ItemGroup>
     <Resource Include="Icon\about.png" />
+    <Resource Include="Icon\about_back.jpeg" />
     <Resource Include="Icon\desktop.png" />
     <Resource Include="Icon\information.png" />
     <Resource Include="Icon\system.png" />
