update project config

--- a/Master-Zhao/Master-Zhao.Config/Master-Zhao.Config.csproj
+++ b/Master-Zhao/Master-Zhao.Config/Master-Zhao.Config.csproj
@@ -5,6 +5,10 @@
     <RootNamespace>Master_Zhao.Config</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
