--- a/Master-Zhao/Master-Zhao.IO/Master-Zhao.IO.csproj
+++ b/Master-Zhao/Master-Zhao.IO/Master-Zhao.IO.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Master_Zhao.IO</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
 </Project>
