--- a/Master-Zhao/Master-Zhao.DynamicDesktop/Master-Zhao.DynamicDesktop.csproj
+++ b/Master-Zhao/Master-Zhao.DynamicDesktop/Master-Zhao.DynamicDesktop.csproj
@@ -14,7 +14,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>..\Code\github\Master-Zhao.git\Master-Zhao\Master-Zhao.Shell\bin\Release\net5.0-windows\</OutputPath>
+    <OutputPath>..\Master-Zhao.Shell\bin\Release\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
