--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -22,6 +22,7 @@
     <None Remove="Icon\about.png" />
     <None Remove="Icon\about_back.jpeg" />
     <None Remove="Icon\desktop.png" />
+    <None Remove="Icon\huashui.jpg" />
     <None Remove="Icon\information.png" />
     <None Remove="Icon\system.png" />
     <None Remove="Icon\windows10_blurtaskbar.png" />
@@ -49,6 +50,7 @@
     <Resource Include="Icon\about.png" />
     <Resource Include="Icon\about_back.jpeg" />
     <Resource Include="Icon\desktop.png" />
+    <Resource Include="Icon\huashui.jpg" />
     <Resource Include="Icon\information.png" />
     <Resource Include="Icon\system.png" />
     <Resource Include="Icon\windows10_blurtaskbar.png" />
