--- a/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj.filters
+++ b/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="CoreUtil.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="IconTool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -57,6 +60,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CoreUtil.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="IconTool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
