--- a/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj.filters
+++ b/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="IconTool.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="InputTool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -63,6 +66,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="IconTool.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="InputTool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
