--- a/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj
+++ b/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="IconTool.h" />
     <ClInclude Include="InputTool.h" />
     <ClInclude Include="RegTool.h" />
+    <ClInclude Include="ResTool.h" />
     <ClInclude Include="StartupTool.h" />
     <ClInclude Include="SystemTool.h" />
   </ItemGroup>
@@ -176,6 +177,7 @@
     <ClCompile Include="IconTool.cpp" />
     <ClCompile Include="InputTool.cpp" />
     <ClCompile Include="RegTool.cpp" />
+    <ClCompile Include="ResTool.cpp" />
     <ClCompile Include="StartupTool.cpp" />
     <ClCompile Include="SystemTool.cpp" />
   </ItemGroup>
