--- a/Master-Zhao/Master-Zhao.DynamicDesktop/Master-Zhao.DynamicDesktop.csproj
+++ b/Master-Zhao/Master-Zhao.DynamicDesktop/Master-Zhao.DynamicDesktop.csproj
@@ -2,19 +2,19 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Master_Zhao.DynamicDesktop</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>..\Master-Zhao.Shell\bin\Debug</OutputPath>
+    <OutputPath>..\x64\Debug\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>..\Master-Zhao.Shell\bin\Release\</OutputPath>
+    <OutputPath>..\x64\Release\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
