--- a/Master-Zhao/Master-Zhao.Test/Master-Zhao.Test.vcxproj
+++ b/Master-Zhao/Master-Zhao.Test/Master-Zhao.Test.vcxproj
@@ -79,12 +79,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>..\Master-Zhao.Shell\bin\Debug\net5.0-windows\</OutDir>
+    <OutDir>..\x64\Debug\netcoreapp3.1\</OutDir>
     <LibraryPath>.\imgui\libs\glfw\lib-vc2010-64;$(LibraryPath)</LibraryPath>
     <IncludePath>.\imgui;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>..\x64\Release\netcoreapp3.1\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
