--- a/Master-Zhao/Master-Zhao.Video/Master-Zhao.Video.csproj
+++ b/Master-Zhao/Master-Zhao.Video/Master-Zhao.Video.csproj
@@ -1,12 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-      <TargetFramework>net5.0-windows</TargetFramework>
+      <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Master_Zhao.Video</RootNamespace>
     <OutputType>Library</OutputType>
     <UseWindowsForms>true</UseWindowsForms>
     <UseWPF>true</UseWPF>
     <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>..\x64\Debug\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\x64\Release\</OutputPath>
   </PropertyGroup>
 
 </Project>
