--- a/Master-Zhao/Master-Zhao.DynamicDesktop/Master-Zhao.DynamicDesktop.csproj
+++ b/Master-Zhao/Master-Zhao.DynamicDesktop/Master-Zhao.DynamicDesktop.csproj
@@ -10,6 +10,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\x64\Debug\</OutputPath>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
