--- a/Master-Zhao/Master-Zhao.Test/Master-Zhao.Test.vcxproj
+++ b/Master-Zhao/Master-Zhao.Test/Master-Zhao.Test.vcxproj
@@ -147,6 +147,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DesktopToolTest.cpp" />
+    <ClCompile Include="IconToolTest.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
@@ -158,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DesktopToolTest.h" />
+    <ClInclude Include="IconToolTest.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_dx11.h" />
