--- a/Master-Zhao/Master-Zhao.Test/Master-Zhao.Test.vcxproj.filters
+++ b/Master-Zhao/Master-Zhao.Test/Master-Zhao.Test.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="imgui\imgui_widgets.cpp">
       <Filter>imgui</Filter>
     </ClCompile>
+    <ClCompile Include="IconToolTest.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DesktopToolTest.h">
@@ -73,6 +76,9 @@
     </ClInclude>
     <ClInclude Include="imgui\imstb_truetype.h">
       <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="IconToolTest.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
