--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -30,8 +30,9 @@
     <None Remove="Icon\information.png" />
     <None Remove="Icon\move.jpg" />
     <None Remove="Icon\system.png" />
-    <None Remove="Icon\windows10_blurtaskbar.png" />
+    <None Remove="Icon\windows10_blur_taskbar.png" />
     <None Remove="Icon\windows10_taskbar.png" />
+    <None Remove="Icon\windows10_transparent_taskbar.png" />
     <None Remove="logo.png" />
     <None Remove="recycle.png" />
   </ItemGroup>
@@ -39,6 +40,8 @@
   <ItemGroup>
     <Resource Include="Icon\fastrun.png" />
     <Resource Include="Icon\move.jpg" />
+    <Resource Include="Icon\windows10_blur_taskbar.png" />
+    <Resource Include="Icon\windows10_transparent_taskbar.png" />
     <Resource Include="logo.ico" />
   </ItemGroup>
 
@@ -64,7 +67,6 @@
     <Resource Include="Icon\huashui.jpg" />
     <Resource Include="Icon\information.png" />
     <Resource Include="Icon\system.png" />
-    <Resource Include="Icon\windows10_blurtaskbar.png" />
     <Resource Include="Icon\windows10_taskbar.png" />
     <Resource Include="logo.png" />
     <Resource Include="recycle.png" />
