add windows 98 start menu xaml

--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -72,4 +72,8 @@
     <Resource Include="recycle.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="StartMenu\Win98\Icon\" />
+  </ItemGroup>
+
 </Project>
