--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -35,6 +35,7 @@
     <None Remove="Icon\windows10_transparent_taskbar.png" />
     <None Remove="logo.png" />
     <None Remove="recycle.png" />
+    <None Remove="StartMenu\Win98\Icon\windows_update.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -70,10 +71,7 @@
     <Resource Include="Icon\windows10_taskbar.png" />
     <Resource Include="logo.png" />
     <Resource Include="recycle.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="StartMenu\Win98\Icon\" />
+    <Resource Include="StartMenu\Win98\Icon\windows_update.png" />
   </ItemGroup>
 
 </Project>
