test menu style

--- a/Master-Zhao/Master-Zhao.Shell.Test/Master-Zhao.Shell.Test.csproj
+++ b/Master-Zhao/Master-Zhao.Shell.Test/Master-Zhao.Shell.Test.csproj
@@ -18,7 +18,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Icon\windows_update.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Master-Zhao.Shell\Master-Zhao.Shell.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Icon\windows_update.png" />
   </ItemGroup>
 
 </Project>
