add setting page

--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -29,6 +29,7 @@
     <None Remove="Icon\huashui.jpg" />
     <None Remove="Icon\information.png" />
     <None Remove="Icon\move.jpg" />
+    <None Remove="Icon\setting.png" />
     <None Remove="Icon\StartMenu\startmenu_98.png" />
     <None Remove="Icon\system.png" />
     <None Remove="Icon\windows10_blur_taskbar.png" />
@@ -51,6 +52,7 @@
   <ItemGroup>
     <Resource Include="Icon\fastrun.png" />
     <Resource Include="Icon\move.jpg" />
+    <Resource Include="Icon\setting.png" />
     <Resource Include="Icon\StartMenu\startmenu_98.png" />
     <Resource Include="Icon\windows10_blur_taskbar.png" />
     <Resource Include="Icon\windows10_transparent_taskbar.png" />
