--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -8,6 +8,7 @@
     <Authors>ZTI</Authors>
     <Company>https://github.com/zhaotianff</Company>
     <ApplicationIcon>logo.ico</ApplicationIcon>
+    <StartupObject>Master_Zhao.Shell.Startup</StartupObject>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
