--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -35,6 +35,7 @@
     <None Remove="Icon\move.jpg" />
     <None Remove="Icon\setting.png" />
     <None Remove="Icon\StartMenu\startmenu_98.png" />
+    <None Remove="Icon\StartMenu\startmenu_flat.png" />
     <None Remove="Icon\system.png" />
     <None Remove="Icon\windows10_blur_taskbar.png" />
     <None Remove="Icon\windows10_taskbar.png" />
@@ -61,6 +62,7 @@
     <Resource Include="Icon\move.jpg" />
     <Resource Include="Icon\setting.png" />
     <Resource Include="Icon\StartMenu\startmenu_98.png" />
+    <Resource Include="Icon\StartMenu\startmenu_flat.png" />
     <Resource Include="Icon\windows10_blur_taskbar.png" />
     <Resource Include="Icon\windows10_transparent_taskbar.png" />
     <Resource Include="logo.ico" />
