update windows flat start menu ui

--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -105,4 +105,8 @@
     <Resource Include="StartMenu\Win98\Icon\windows_update.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Icon\Weather\" />
+  </ItemGroup>
+
 </Project>
