update flat windows start menu ui

--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -34,9 +34,12 @@
     <None Remove="Icon\information.png" />
     <None Remove="Icon\move.jpg" />
     <None Remove="Icon\setting.png" />
+    <None Remove="Icon\StartMenu\power.png" />
+    <None Remove="Icon\StartMenu\setting.png" />
     <None Remove="Icon\StartMenu\startmenu_98.png" />
     <None Remove="Icon\StartMenu\startmenu_flat.png" />
     <None Remove="Icon\system.png" />
+    <None Remove="Icon\Weather\MostlySunnyDay.png" />
     <None Remove="Icon\windows10_blur_taskbar.png" />
     <None Remove="Icon\windows10_taskbar.png" />
     <None Remove="Icon\windows10_transparent_taskbar.png" />
@@ -61,8 +64,11 @@
     <Resource Include="Icon\fastrun.png" />
     <Resource Include="Icon\move.jpg" />
     <Resource Include="Icon\setting.png" />
+    <Resource Include="Icon\StartMenu\power.png" />
+    <Resource Include="Icon\StartMenu\setting.png" />
     <Resource Include="Icon\StartMenu\startmenu_98.png" />
     <Resource Include="Icon\StartMenu\startmenu_flat.png" />
+    <Resource Include="Icon\Weather\MostlySunnyDay.png" />
     <Resource Include="Icon\windows10_blur_taskbar.png" />
     <Resource Include="Icon\windows10_transparent_taskbar.png" />
     <Resource Include="logo.ico" />
@@ -103,10 +109,6 @@
     <Resource Include="StartMenu\Win98\Icon\settings.png" />
     <Resource Include="StartMenu\Win98\Icon\shutdown.png" />
     <Resource Include="StartMenu\Win98\Icon\windows_update.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Icon\Weather\" />
   </ItemGroup>
 
 </Project>
