--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -35,6 +35,7 @@
     <None Remove="Icon\move.jpg" />
     <None Remove="Icon\setting.png" />
     <None Remove="Icon\StartMenu\power.png" />
+    <None Remove="Icon\StartMenu\search.png" />
     <None Remove="Icon\StartMenu\setting.png" />
     <None Remove="Icon\StartMenu\startmenu_98.png" />
     <None Remove="Icon\StartMenu\startmenu_flat.png" />
@@ -66,6 +67,7 @@
     <Resource Include="Icon\move.jpg" />
     <Resource Include="Icon\setting.png" />
     <Resource Include="Icon\StartMenu\power.png" />
+    <Resource Include="Icon\StartMenu\search.png" />
     <Resource Include="Icon\StartMenu\setting.png" />
     <Resource Include="Icon\StartMenu\startmenu_98.png" />
     <Resource Include="Icon\StartMenu\startmenu_flat.png" />
