--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -43,11 +43,19 @@
     <None Remove="Icon\StartMenu\startmenu_flat.png" />
     <None Remove="Icon\system.png" />
     <None Remove="Icon\visual studio.png" />
-    <None Remove="Icon\Weather\Cloudy.png" />
-    <None Remove="Icon\Weather\LightRain.png" />
-    <None Remove="Icon\Weather\MostlySunny.png" />
-    <None Remove="Icon\Weather\Sunny.png" />
-    <None Remove="Icon\Weather\Thunderstorm.png" />
+    <None Remove="Icon\Weather\cloud.png" />
+    <None Remove="Icon\Weather\dust.png" />
+    <None Remove="Icon\Weather\heavy_rain.png" />
+    <None Remove="Icon\Weather\light_rain.png" />
+    <None Remove="Icon\Weather\light_snow.png" />
+    <None Remove="Icon\Weather\mostly_sun.png" />
+    <None Remove="Icon\Weather\rain.png" />
+    <None Remove="Icon\Weather\rain_cloud.png" />
+    <None Remove="Icon\Weather\sleet.png" />
+    <None Remove="Icon\Weather\snow.png" />
+    <None Remove="Icon\Weather\snow_storm.png" />
+    <None Remove="Icon\Weather\storm.png" />
+    <None Remove="Icon\Weather\sun.png" />
     <None Remove="Icon\windows10_blur_taskbar.png" />
     <None Remove="Icon\windows10_taskbar.png" />
     <None Remove="Icon\windows10_transparent_taskbar.png" />
@@ -80,11 +88,19 @@
     <Resource Include="Icon\StartMenu\startmenu_98.png" />
     <Resource Include="Icon\StartMenu\startmenu_flat.png" />
     <Resource Include="Icon\visual studio.png" />
-    <Resource Include="Icon\Weather\Cloudy.png" />
-    <Resource Include="Icon\Weather\LightRain.png" />
-    <Resource Include="Icon\Weather\MostlySunny.png" />
-    <Resource Include="Icon\Weather\Sunny.png" />
-    <Resource Include="Icon\Weather\Thunderstorm.png" />
+    <Resource Include="Icon\Weather\cloud.png" />
+    <Resource Include="Icon\Weather\dust.png" />
+    <Resource Include="Icon\Weather\heavy_rain.png" />
+    <Resource Include="Icon\Weather\light_rain.png" />
+    <Resource Include="Icon\Weather\light_snow.png" />
+    <Resource Include="Icon\Weather\mostly_sun.png" />
+    <Resource Include="Icon\Weather\rain.png" />
+    <Resource Include="Icon\Weather\rain_cloud.png" />
+    <Resource Include="Icon\Weather\sleet.png" />
+    <Resource Include="Icon\Weather\snow.png" />
+    <Resource Include="Icon\Weather\snow_storm.png" />
+    <Resource Include="Icon\Weather\storm.png" />
+    <Resource Include="Icon\Weather\sun.png" />
     <Resource Include="Icon\windows10_blur_taskbar.png" />
     <Resource Include="Icon\windows10_transparent_taskbar.png" />
     <Resource Include="logo.ico" />
