query startup item

--- a/Master-Zhao/Master-Zhao.ConfigTests/Master-Zhao.ConfigTests.csproj
+++ b/Master-Zhao/Master-Zhao.ConfigTests/Master-Zhao.ConfigTests.csproj
@@ -5,6 +5,8 @@
     <RootNamespace>Master_Zhao.ConfigTests</RootNamespace>
 
     <IsPackable>false</IsPackable>
+
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
