get startup item

--- a/Master-Zhao/Master-Zhao.Core.Tests/Master-Zhao.Core.Tests.vcxproj.filters
+++ b/Master-Zhao/Master-Zhao.Core.Tests/Master-Zhao.Core.Tests.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="StartupToolTests.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="SystemToolTests.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
