--- a/Master-Zhao/Master-Zhao.AdminTask/Master-Zhao.AdminTask.csproj
+++ b/Master-Zhao/Master-Zhao.AdminTask/Master-Zhao.AdminTask.csproj
@@ -8,9 +8,14 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>E:\project\github\Master-Zhao\Master-Zhao\x64\Debug</OutputPath>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>..\x64\Debug\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>..\x64\Release\</OutputPath>
   </PropertyGroup>
 
 </Project>
