--- a/Master-Zhao/Master-Zhao.Core.Tests/Master-Zhao.Core.Tests.vcxproj.filters
+++ b/Master-Zhao/Master-Zhao.Core.Tests/Master-Zhao.Core.Tests.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="RegToolTests.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="PowerToolTests.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
