--- a/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj.filters
+++ b/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="ResTool.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="PowerTool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -75,6 +78,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="ResTool.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="PowerTool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
